# AnimalFarm

./: .dockerignore  .env.example  .gitignore  AGENT_DESIGN.md  Agent.py  DEVELOPMENT_PLAN.md  Dockerfile  README.md  SCORING_DESIGN.md  SIMULATION_PY_BREAKDOWN.md  VEGETATION_PLAN.md  WORLD_VIEWER.md  clock.py  config.py  deps.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  event_bus.py  genome.py  genome_pool.py  instructions.txt  main.py  plant.py  pyproject.toml  simulation.py
.claude/: settings.json
Agent/: README.md  __init__.py  test_agent.py
agents/: agent.py  mutations.py  needs.py  reproduction.py
agents/scoring/: __init__.py  (+6 more)
animal-farm-react/: package-lock.json  package.json
client/: Dockerfile  index.html
data/: genome_pool.db
models/: __init__.py  agent.py  cell.py  world.py
routers/: agents.py  clock.py  game.py  stats.py  world.py
server/: Dockerfile  pyproject.toml
simulation/: __init__.py  game.py  time_system.py
src/: agent.py  clock.py  config.py  connections.py  deps.py  ecology.py  events.py  example_simulation.py  food.py  genome_pool.py  group.py  home.py  main.py  metrics.py  movement.py  mutations.py  noise.py  pathfinding.py  plant.py  playground_scenarios.py  pos.py  reproduction.py  scenario.py  simulation.py  simulation_tests.py  tasks.py  weather.py  world.py
static/: index.html  playground.html  tests.html  world-viewer.html
tests/: conftest.py  test_agent_behavior.py  test_cases.py
visualization/: __init__.py  camera.py  game_ui.py  renderer.py  status_panel.py
world/: preview.py
(+64 files in other folders)
